# CMPSC488FA24Sec2Team1

./: .gitignore  CMPSC488FA24Sec2Team1.ino  README.md  cruelangelsthesis.py  flake.nix  install-everything.sh  main.py  mongo-log.py  package-list.txt  pyproject.toml  requirements.txt
beacons/: beacons.py
cores3/: cores3.ino  s3.py
cores3/camera/: camera.ino  sketch.yaml
cores3/imu_ultrasonic/: imuultra.m5f2
cores3/wifi/: networking.py  sketch.yaml  wifi.ino
gui/: stuff.py  testinggui.py  tui.py
jetson-check/scripts/: services.sh  video.sh
jetson_cam_publisher/src/: main.py
pi-check/: pi-check.sh
pi-check/scripts/: disk.sh  network.sh  services.sh  video.sh
ros/: cruelangelsthesis.py  launch_navigation.sh  roslaunch.sh
ros/automated_turret/: package.xml  setup.cfg  setup.py
ros/automated_turret/automated_turret/: main.py
ros/cores3/: package.xml  setup.cfg  setup.py
ros/cores3/cores3/: main.py
ros/jetson_cam_publisher/: CMakeLists.txt  source.sh
ros/jetson_cam_publisher/src/: main.py  test.py
ros/kinect_ros_jazzy/: README.md  fix_make_install.patch  package.xml  setup.cfg  setup.py
ros/kinect_ros_jazzy/kinect_ros_jazzy/: kinect.py  publish.py  subscriber.py  subsriber.py
ros/laser_control/: package.xml  setup.py
ros/laser_control/laser_control/: laser_control_node.py
ros/lazerbot_tf/: CMakeLists.txt
ros/lazerbot_tf/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
ros/lazerbot_tf/install/lazerbot_tf/share/ament_index/resource_index/parent_prefix_path/: lazerbot_tf
ros/lazerbot_tf/install/lazerbot_tf/share/lazerbot_tf/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.sh  package.xml  package.zsh
ros/lazerbot_tf/install/lazerbot_tf/share/lazerbot_tf/cmake/: lazerbot_tfConfig.cmake
ros/lazerbot_tf/install/lazerbot_tf/share/lazerbot_tf/rviz/: urdf_config.rviz
ros/lazerbot_tf/install/lazerbot_tf/share/lazerbot_tf/src/: lazerbot_tf.urdf
ros/lazerbot_tf/launch/: tfpublish.launch.py  tfrviz.launch.py
ros/lazerbot_tf/rviz/: urdf_config.rviz
ros/lazerbot_tf/src/: lazerbot_tf.urdf
ros/log_to_mongodb/: package.xml  setup.cfg  setup.py
ros/log_to_mongodb/log_to_mongodb/: main.py
ros/move_wheels/: package.xml  setup.cfg  setup.py
ros/move_wheels/move_wheels/: motor_controller.py  wheels.py
ros/navigation/: package.xml  setup.py
ros/navigation/navigation/: actually_automatic.py  very_much_fully_auto_control.py
ros/robot_control/: package.xml  setup.py
ros/robot_control/robot_control/: control.py  turret.py  twist_control.py
ros/robot_interfaces/: CMakeLists.txt  package.xml
ros/robot_interfaces/msg/: TurretInstruction.msg  WheelsInstruction.msg
ros/run_nav2/: package.xml  setup.cfg  setup.py
ros/run_nav2/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
ros/run_nav2/install/run_nav2/lib/run_nav2/: goalpose
ros/run_nav2/install/run_nav2/share/run_nav2/: package.bash  package.dsv  package.sh  package.xml  package.zsh
ros/run_nav2/launch/: nav2_proxy.launch.py  nav2_proxy_launch.py
ros/run_nav2/run_nav2/: goalpose.py  maprelay.py  odom_base_tf.py  odom_test_data.py  rtabodom.py
ros/run_slam/: package.xml  setup.cfg  setup.py
ros/run_slam/launch/: rtabmap.launch.py  slam.launch.py
ros/wheels/: package.xml  setup.cfg  setup.py
ros/wheels/wheels/: wheels2.py
targeting/: camtest.py  pyproject.toml  turret.py  visualizeArilTag.py
targeting/steppers/: DRV8825.py  docs.md  test.py
wheels/: tester.py  wheels.py
