<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinect_ros_jazzy</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="HoangNKNguyen@proton.me">dev</maintainer>
  <license>TODO: License declaration</license>

  <depend>freenect</depend>
  <depend>python3-opencv</depend>
  <depend>python3-numpy</depend>
  <depend>vision-opencv</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
